--- a/time-tracking-dashboard-project/package.json
+++ b/time-tracking-dashboard-project/package.json
@@ -6,9 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest --config ./jest.config.json",
-    "test:watch": "npm run test -- --watch"
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "12.1.6",
@@ -16,7 +14,6 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@testing-library/react": "^13.3.0",
     "@types/node": "17.0.43",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
